--- a/src/XSTest/XSTest.csproj
+++ b/src/XSTest/XSTest.csproj
@@ -109,9 +109,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="react\app.js">
-        <LogicalName>app.js</LogicalName>
+      <LogicalName>app.js</LogicalName>
     </EmbeddedResource>
-    <Content Include="app.js" />
+    <Content Include="jsx\app.js" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
@@ -176,7 +176,7 @@
   <Import Project="..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets" Condition="Exists('..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets')" />
   <PropertyGroup>
     <PreBuildEvent>cd $(ProjectDir)
-jsx.cmd .\ react\</PreBuildEvent>
+jsx.cmd jsx\ react\</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
