Moving state to JS runtime (XSRT) from C# lib (XSRT2) PART 1
* This should avoid serialization and improve the expected "assign" behavior
* To enable cross JsContext usage, we need to support serialization, for
now I've done this by converting to/from WinRT objects
* This change is the first part, enabling the basic OM and functionality
* Part 2 will remove the StateManager class and move all the samples over

Lots more to do...

--- a/src/XSRT/XSRT.vcxproj.filters
+++ b/src/XSRT/XSRT.vcxproj.filters
@@ -10,10 +10,12 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="chakrahost.cpp" />
     <ClCompile Include="JScriptRuntime.cpp" />
+    <ClCompile Include="JScriptValueMarshaller.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="JScriptRuntime.h" />
     <ClInclude Include="chakrahost.h" />
+    <ClInclude Include="JScriptValueMarshaller.h" />
   </ItemGroup>
 </Project>
