--- a/src/XSRT/XSRT.vcxproj
+++ b/src/XSRT/XSRT.vcxproj
@@ -215,11 +215,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="chakrahost.h" />
+    <ClInclude Include="JScriptValueMarshaller.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="JScriptRuntime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chakrahost.cpp" />
+    <ClCompile Include="JScriptValueMarshaller.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
