--- a/src/XSTest/XSTest.csproj
+++ b/src/XSTest/XSTest.csproj
@@ -114,6 +114,7 @@
     <EmbeddedResource Include="react\app.js">
       <LogicalName>app.js</LogicalName>
     </EmbeddedResource>
+    <Content Include="images\IMG_1402.jpg" />
     <Content Include="jsx\app.js" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\Logo.scale-100.png" />
