Move "state manager" to be the JS API for the XSRT host API. There are now 2 "host" type things - JSRT host (Chakra) and XSRT host (Xaml Script)

--- a/src/XSRT2/XSRT2.csproj
+++ b/src/XSRT2/XSRT2.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Diff.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="RuntimeHelpers.cs" />
-    <Compile Include="StateManager.cs" />
+    <Compile Include="JScriptHostProjection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
