Move to using TypeScript's support for XML literals (React) instead of JSX. This means that input files must have the TSX extension, and you also need to install the @next version of TSC.

--- a/src/ManualTests/ManualTests.csproj
+++ b/src/ManualTests/ManualTests.csproj
@@ -112,7 +112,7 @@
     <EmbeddedResource Include="build\tests.js">
       <LogicalName>tests.js</LogicalName>
     </EmbeddedResource>
-    <Content Include="jsx\tests.js" />
+    <None Include="jsx\tests.tsx" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
@@ -170,7 +170,8 @@
   <Import Project="..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets" Condition="Exists('..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets')" />
   <PropertyGroup>
     <PreBuildEvent>cd $(ProjectDir)
-jsx.cmd jsx\ build\</PreBuildEvent>
+tsc --out build\tests.js --JSX react jsx\tests.tsx
+</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
