--- a/src/XSRT2/XSRT2.csproj
+++ b/src/XSRT2/XSRT2.csproj
@@ -144,6 +144,7 @@
     <EmbeddedResource Include="xsrt.js" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="xsrt.d.ts" />
     <TypeScriptCompile Include="xsrt.ts" />
   </ItemGroup>
   <ItemGroup>
@@ -172,7 +173,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>cd $(ProjectDir)
-tsc xsrt.ts</PreBuildEvent>
+tsc -d xsrt.ts</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
