--- a/src/XSTest/XSTest.csproj
+++ b/src/XSTest/XSTest.csproj
@@ -116,7 +116,7 @@
       <LogicalName>app.js</LogicalName>
     </EmbeddedResource>
     <Content Include="images\IMG_1402.jpg" />
-    <Content Include="jsx\app.js" />
+    <None Include="jsx\app.tsx" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
@@ -181,7 +181,7 @@
   <Import Project="..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets" Condition="Exists('..\packages\Microsoft.ApplicationInsights.0.14.3-build00177\build\portable-win81+wpa81\Microsoft.ApplicationInsights.targets')" />
   <PropertyGroup>
     <PreBuildEvent>cd $(ProjectDir)
-jsx.cmd jsx\ react\</PreBuildEvent>
+tsc --out react\app.js --JSX react jsx\app.tsx</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
