Getting closer to implementing REPL in XS...
* Refactored "Host" into XSRuntime (non-UI) and UIAwareHost (UI & policy layer)
* Added "Parse JSON string as XS JSON" for building UI
* Added ContentControl

--- a/src/XSRT2/XSRT2.csproj
+++ b/src/XSRT2/XSRT2.csproj
@@ -118,10 +118,11 @@
       <DependentUpon>ClassHandlers.tt</DependentUpon>
     </Compile>
     <Compile Include="Diff.cs" />
-    <Compile Include="Host.cs" />
+    <Compile Include="XSRuntime.cs" />
     <Compile Include="RuntimeHelpers.cs" />
-    <Compile Include="JScriptHostProjection.cs" />
+    <Compile Include="JScriptXSRuntimeProjection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIAwareHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
